--- a/binary-installation-advanced/Vagrantfile
+++ b/binary-installation-advanced/Vagrantfile
@@ -19,17 +19,17 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     xenserver.vm.box = 'duffy/xenserver'
 
     # Public Network (IP address is ignored.)
-    xenserver.vm.network :private_network, :auto_config => false, :ip => '192.168.57.10'
+    xenserver.vm.network :private_network, :auto_config => false, :ip => '192.168.23.10'
 
     # Guest Network (IP address is ignored.)
-    xenserver.vm.network :private_network, :auto_config => false, :ip => '192.168.58.10'
+    xenserver.vm.network :private_network, :auto_config => false, :ip => '192.168.24.10'
 
     # Configure Interfaces
 
     ## Configure Management Interface
     xenserver.vm.provision 'shell' do |s|
       s.path = '../common/xenserver/configure-network.sh'
-      s.args = %w(eth1 192.168.56.10 255.255.255.0 MGMT)
+      s.args = %w(eth1 192.168.22.10 255.255.255.0 MGMT)
     end
 
     ## Configure Public Interface
@@ -62,13 +62,18 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     management.vm.box = 'chef/centos-6.5'
 
     # Configure management interface
-    management.vm.network :private_network, :auto_config => true, :ip => '192.168.56.5'
+    management.vm.network :private_network, :auto_config => true, :ip => '192.168.22.5'
 
     # Configure public interface
-    management.vm.network :private_network, :auto_config => true, :ip => '192.168.57.5'
+    management.vm.network :private_network, :auto_config => true, :ip => '192.168.23.5'
 
-    # Port forward MySQL
+    # Port forwards
     management.vm.network 'forwarded_port', guest: 3306, host: 3306
+    management.vm.network 'forwarded_port', guest: 8080, host: 8080
+
+    management.vm.provider 'virtualbox' do |v|
+      v.customize ['modifyvm', :id, '--memory', 2048]
+    end
 
     management.vm.provider 'virtualbox' do |v|
       v.customize ['modifyvm', :id, '--memory', 512]
@@ -78,12 +83,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     end
 
     management.omnibus.chef_version = "11.16.0"
-
-    if Vagrant.has_plugin?('vagrant-cachier')
-      management.cache.scope = :box
-      management.cache.auto_detect = true
-      management.omnibus.cache_packages = true
-    end
 
     management.librarian_chef.cheffile_dir = '../common/management'
 
