fix bug on advanced zones

--- a/binary-installation-advanced/Vagrantfile
+++ b/binary-installation-advanced/Vagrantfile
@@ -44,6 +44,12 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       s.args = %w(eth3 na na GUEST)
     end
 
+    ## Tweak kernel
+    xenserver.configure("2") do |config|
+      config.vm.provision "shell",
+        inline: "sed -i -e 's/net.bridge.bridge-nf-call-iptables = 1/net.bridge.bridge-nf-call-iptables = 0/g' -e 's/net.bridge.bridge-nf-call-arptables = 1/net.bridge.bridge-nf-call-arptables = 0/g' /etc/sysctl.conf && /sbin/sysctl -p /etc/sysctl.conf"
+    end
+
     ## Map host only networks and the adapters
     xenserver.vm.provider 'virtualbox' do |v|
       v.customize ['modifyvm', :id, '--nicpromisc2', 'allow-all']
