--- a/advanced/Vagrantfile
+++ b/advanced/Vagrantfile
@@ -75,6 +75,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     management.vm.provider 'virtualbox' do |v|
       v.customize ['modifyvm', :id, '--memory', 512]
+      v.customize ['modifyvm', :id, '--hostonlyadapter2', 'vboxnet0']
       v.customize ['modifyvm', :id, '--hostonlyadapter3', 'vboxnet1']
       v.customize ["modifyvm", :id, '--nictype2', 'Am79C973']
       v.customize ["modifyvm", :id, '--nictype3', 'Am79C973']
