--- a/basic/Vagrantfile
+++ b/basic/Vagrantfile
@@ -20,6 +20,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     ## Map host only networks and the adapters
     xenserver.vm.provider 'virtualbox' do |v|
+      v.customize ['modifyvm', :id, '--hostonlyadapter2', 'vboxnet0']
       v.customize ['modifyvm', :id, '--nicpromisc2', 'allow-all']
       v.customize ["modifyvm", :id, '--nictype2', 'Am79C973']
     end
@@ -42,6 +43,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     management.vm.provider 'virtualbox' do |v|
       v.customize ['modifyvm', :id, '--memory', 512]
+      v.customize ['modifyvm', :id, '--hostonlyadapter2', 'vboxnet0']
       v.customize ["modifyvm", :id, '--nictype2', 'Am79C973']
     end
 
