--- a/advanced/Vagrantfile
+++ b/advanced/Vagrantfile
@@ -81,7 +81,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       v.customize ["modifyvm", :id, '--nictype3', 'Am79C973']
     end
 
-    management.omnibus.chef_version = "11.16.0"
+    management.omnibus.chef_version = :latest
 
     management.librarian_chef.cheffile_dir = '../common/management'
 
