--- a/binary-installation-basic/Vagrantfile
+++ b/binary-installation-basic/Vagrantfile
@@ -5,39 +5,15 @@ VAGRANTFILE_API_VERSION = '2'
 
 Vagrant.require_version '>= 1.5.0'
 
+unless Vagrant.has_plugin?('vagrant-berkshelf')
+  raise 'vagrant-berkshelf is not installed!'
+end
+
+unless Vagrant.has_plugin?('vagrant-omnibus')
+  raise 'vagrant-omnibus is not installed!'
+end
+
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-
-  is_windows = (RUBY_PLATFORM =~ /mswin|mingw|cygwin/)
-
-  config.vm.define 'xenserver' do |xenserver|
-    xenserver.vm.box = 'duffy/xenserver'
-
-    if is_windows
-      xenserver.vm.provision 'shell' do |s|
-        s.path = '..\common\xenserver\configure-network.sh'
-        s.args = %w(eth1 192.168.22.10 255.255.255.0 MGMT)
-      end
-
-      xenserver.vm.provider 'virtualbox' do |v|
-        v.customize ['modifyvm', :id, '--nicpromisc2', 'allow-all']
-        v.customize ['modifyvm', :id, '--hostonlyadapter2', 'VirtualBox Host-Only Ethernet Adapter']
-        v.customize ['modifyvm', :id, '--nictype2', 'Am79C973']
-      end
-
-    else
-      xenserver.vm.provision 'shell' do |s|
-        s.path = '../common/xenserver/configure-network.sh'
-        s.args = %w(eth1 192.168.22.10 255.255.255.0 MGMT)
-      end
-
-      xenserver.vm.provider 'virtualbox' do |v|
-        v.customize ['modifyvm', :id, '--nicpromisc2', 'allow-all']
-        v.customize ['modifyvm', :id, '--hostonlyadapter2', 'vboxnet0']
-        v.customize ['modifyvm', :id, '--nictype2', 'Am79C973']
-      end
-    end
-  end
-
   config.vm.define 'management' do |management|
     management.vm.box = 'chef/centos-6.5'
 
@@ -46,37 +22,27 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     management.vm.network 'forwarded_port', guest: 3306, host: 3306
     management.vm.network 'forwarded_port', guest: 8080, host: 8080
 
-
-    if is_windows
-      management.vm.provider 'virtualbox' do |v|
-        v.customize ['modifyvm', :id, '--hostonlyadapter2', 'VirtualBox Host-Only Ethernet Adapter']
-        v.customize ["modifyvm", :id, '--nictype2', 'Am79C973']
-        v.customize ['modifyvm', :id, '--memory', 2048]
-      end
-      management.librarian_chef.cheffile_dir = '..\common\management'
-    else
-      management.vm.provider 'virtualbox' do |v|
-        v.customize ['modifyvm', :id, '--hostonlyadapter2', 'vboxnet0']
-        v.customize ["modifyvm", :id, '--nictype2', 'Am79C973']
-        v.customize ['modifyvm', :id, '--memory', 2048]
-      end
-      management.librarian_chef.cheffile_dir = '../common/management'
+    management.vm.provider 'virtualbox' do |v|
+      v.customize ['modifyvm', :id, '--memory', 2048]
+      v.customize ['modifyvm', :id, '--hostonlyadapter2', 'vboxnet0']
     end
 
-    management.omnibus.chef_version = "11.16.0"
+    if Vagrant.has_plugin?('vagrant-cachier')
+      management.cache.scope = :box
+      management.cache.auto_detect = true
+      management.omnibus.cache_packages = true
+    end
 
-    management.vm.provision 'chef_solo' do |chef|
-      if is_windows
-        chef.cookbooks_path = ['..\common\management\cookbooks']
-      else
-        chef.cookbooks_path = ['../common/management/cookbooks']
-      end
+    management.omnibus.chef_version = :latest
+    management.berkshelf.berksfile_path = './Berksfile'
+    management.berkshelf.enabled = true
 
-      chef.run_list = [
-        'recipe[nat-router]',
-        'recipe[cloudstack::management-server]'
-      ]
 
+    CHEF_CONFIGURATION = JSON.parse(Pathname(__FILE__).dirname.join('chef_configuration.json').read)
+
+    management.vm.provision :chef_solo do |chef|
+      chef.run_list = CHEF_CONFIGURATION.delete('run_list')
+      chef.json = CHEF_CONFIGURATION
     end
   end
 end
