--- a/binary-installation-advanced/Vagrantfile
+++ b/binary-installation-advanced/Vagrantfile
@@ -1,12 +1,19 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-VAGRANTFILE_API_VERSION = '2'
+xenserver_networking_script = File.join(File.dirname(__FILE__), '.provision-utils', 'configure-network.sh')
 
+is_windows = (RUBY_PLATFORM =~ /mswin|mingw|cygwin/)
+
+virtualbox_interface_0 = if is_windows then 'VirtualBox Host-Only Ethernet Adapter' else 'vboxnet0' end
+virtualbox_interface_1 = if is_windows then 'VirtualBox Host-Only Ethernet Adapter #2' else 'vboxnet1' end
+virtualbox_interface_2 = if is_windows then 'VirtualBox Host-Only Ethernet Adapter #3' else 'vboxnet2' end
+
+VAGRANTFILE_API_VERSION = '2'
 Vagrant.require_version '>= 1.5.0'
 
-unless Vagrant.has_plugin?('vagrant-librarian-chef')
-  raise 'vagrant-librarian-chef is not installed!'
+unless Vagrant.has_plugin?('vagrant-berkshelf')
+  raise 'vagrant-berkshelf is not installed!'
 end
 
 unless Vagrant.has_plugin?('vagrant-omnibus')
@@ -14,8 +21,6 @@ unless Vagrant.has_plugin?('vagrant-omnibus')
 end
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-
-  is_windows = (RUBY_PLATFORM =~ /mswin|mingw|cygwin/)
 
   config.vm.define 'xenserver' do |xenserver|
     xenserver.vm.box = 'duffy/xenserver'
@@ -26,133 +31,70 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     # Guest Network (IP address is ignored.)
     xenserver.vm.network :private_network, :auto_config => false, :ip => '192.168.24.10'
 
-    # Configure Interfaces
-    if is_windows
-      ## Configure Management Interface
-      xenserver.vm.provision 'shell' do |s|
-        s.path = '..\common\xenserver\configure-network.sh'
-        s.args = %w(eth1 192.168.22.10 255.255.255.0 MGMT)
-      end
+    ## Configure Management Interface
+    xenserver.vm.provision 'shell' do |s|
+      s.path = xenserver_networking_script
+      s.args = %w(eth1 192.168.22.10 255.255.255.0 MGMT)
+    end
 
-      ## Configure Public Interface
-      xenserver.vm.provision 'shell' do |s|
-        s.path = '..\common\xenserver\configure-network.sh'
-        s.args = %w(eth2 na na PUBLIC)
-      end
+    ## Configure Public Interface
+    xenserver.vm.provision 'shell' do |s|
+      s.path = xenserver_networking_script
+      s.args = %w(eth2 na na PUBLIC)
+    end
 
-      ## Configure Guest Interface
-      xenserver.vm.provision 'shell' do |s|
-        s.path = '..\common\xenserver\configure-network.sh'
-        s.args = %w(eth3 na na GUEST)
-      end
+    ## Configure Guest Interface
+    xenserver.vm.provision 'shell' do |s|
+      s.path = xenserver_networking_script
+      s.args = %w(eth3 na na GUEST)
+    end
 
-      ## Map host only networks and the adapters
-      xenserver.vm.provider 'virtualbox' do |v|
-        v.customize ['modifyvm', :id, '--nicpromisc2', 'allow-all']
-        v.customize ['modifyvm', :id, '--nicpromisc3', 'allow-all']
-        v.customize ['modifyvm', :id, '--nicpromisc4', 'allow-all']
-        v.customize ['modifyvm', :id, '--hostonlyadapter2', 'VirtualBox Host-Only Ethernet Adapter']
-        v.customize ['modifyvm', :id, '--hostonlyadapter3', 'VirtualBox Host-Only Ethernet Adapter #2']
-        v.customize ['modifyvm', :id, '--hostonlyadapter4', 'VirtualBox Host-Only Ethernet Adapter #3']
-        v.customize ["modifyvm", :id, '--nictype2', 'Am79C973']
-        v.customize ["modifyvm", :id, '--nictype3', 'Am79C973']
-        v.customize ["modifyvm", :id, '--nictype4', 'Am79C973']
-      end
-
-    else
-      ## Configure Management Interface
-      xenserver.vm.provision 'shell' do |s|
-        s.path = '../common/xenserver/configure-network.sh'
-        s.args = %w(eth1 192.168.22.10 255.255.255.0 MGMT)
-      end
-
-      ## Configure Public Interface
-      xenserver.vm.provision 'shell' do |s|
-        s.path = '../common/xenserver/configure-network.sh'
-        s.args = %w(eth2 na na PUBLIC)
-      end
-
-      ## Configure Guest Interface
-      xenserver.vm.provision 'shell' do |s|
-        s.path = '../common/xenserver/configure-network.sh'
-        s.args = %w(eth3 na na GUEST)
-      end
-
-      ## Map host only networks and the adapters
-      xenserver.vm.provider 'virtualbox' do |v|
-        v.customize ['modifyvm', :id, '--nicpromisc2', 'allow-all']
-        v.customize ['modifyvm', :id, '--nicpromisc3', 'allow-all']
-        v.customize ['modifyvm', :id, '--nicpromisc4', 'allow-all']
-        v.customize ['modifyvm', :id, '--hostonlyadapter2', 'vboxnet0']
-        v.customize ['modifyvm', :id, '--hostonlyadapter3', 'vboxnet1']
-        v.customize ['modifyvm', :id, '--hostonlyadapter4', 'vboxnet2']
-        v.customize ["modifyvm", :id, '--nictype2', 'Am79C973']
-        v.customize ["modifyvm", :id, '--nictype3', 'Am79C973']
-        v.customize ["modifyvm", :id, '--nictype4', 'Am79C973']
-      end
-
+    ## Map host only networks and the adapters
+    xenserver.vm.provider 'virtualbox' do |v|
+      v.customize ['modifyvm', :id, '--nicpromisc2', 'allow-all']
+      v.customize ['modifyvm', :id, '--nicpromisc3', 'allow-all']
+      v.customize ['modifyvm', :id, '--nicpromisc4', 'allow-all']
+      v.customize ['modifyvm', :id, '--hostonlyadapter2', virtualbox_interface_0]
+      v.customize ['modifyvm', :id, '--hostonlyadapter3', virtualbox_interface_1]
+      v.customize ['modifyvm', :id, '--hostonlyadapter4', virtualbox_interface_2]
+      v.customize ['modifyvm', :id, '--memory', 6144]
     end
 
     ## Tweak kernel
     xenserver.vm.provision "shell", inline: "sed -i -e 's/net.bridge.bridge-nf-call-iptables = 1/net.bridge.bridge-nf-call-iptables = 0/g' -e 's/net.bridge.bridge-nf-call-arptables = 1/net.bridge.bridge-nf-call-arptables = 0/g' /etc/sysctl.conf && /sbin/sysctl -p /etc/sysctl.conf"
   end
-
+  
   config.vm.define 'management' do |management|
     management.vm.box = 'chef/centos-6.5'
 
-    # Configure management interface
     management.vm.network :private_network, :auto_config => true, :ip => '192.168.22.5'
-
-    # Configure public interface
     management.vm.network :private_network, :auto_config => true, :ip => '192.168.23.5'
 
-    # Port forwards
     management.vm.network 'forwarded_port', guest: 3306, host: 3306
     management.vm.network 'forwarded_port', guest: 8080, host: 8080
 
     management.vm.provider 'virtualbox' do |v|
       v.customize ['modifyvm', :id, '--memory', 2048]
+      v.customize ['modifyvm', :id, '--hostonlyadapter2', virtualbox_interface_0]
+      v.customize ['modifyvm', :id, '--hostonlyadapter3', virtualbox_interface_1]
     end
 
-    if is_windows
-      management.vm.provider 'virtualbox' do |v|
-        v.customize ['modifyvm', :id, '--memory', 512]
-        v.customize ['modifyvm', :id, '--hostonlyadapter2', 'VirtualBox Host-Only Ethernet Adapter']
-        v.customize ['modifyvm', :id, '--hostonlyadapter3', 'VirtualBox Host-Only Ethernet Adapter #2']
-        v.customize ["modifyvm", :id, '--nictype2', 'Am79C973']
-        v.customize ["modifyvm", :id, '--nictype3', 'Am79C973']
-      end
-      management.librarian_chef.cheffile_dir = '..\common\management'
-    else
-      management.vm.provider 'virtualbox' do |v|
-        v.customize ['modifyvm', :id, '--memory', 512]
-        v.customize ['modifyvm', :id, '--hostonlyadapter2', 'vboxnet0']
-        v.customize ['modifyvm', :id, '--hostonlyadapter3', 'vboxnet1']
-        v.customize ["modifyvm", :id, '--nictype2', 'Am79C973']
-        v.customize ["modifyvm", :id, '--nictype3', 'Am79C973']
-      end
-      management.librarian_chef.cheffile_dir = '../common/management'
+    if Vagrant.has_plugin?('vagrant-cachier')
+      management.cache.scope = :box
+      management.cache.auto_detect = true
+      management.omnibus.cache_packages = true
     end
 
-    management.omnibus.chef_version = "11.16.0"
+    management.omnibus.chef_version = :latest 
+    management.berkshelf.berksfile_path = File.join(File.dirname(__FILE__), 'Berksfile')
+    management.berkshelf.enabled = true
 
-    management.vm.provision 'chef_solo' do |chef|
-      if is_windows
-        chef.cookbooks_path = ['..\common\management\cookbooks']
-      else
-        chef.cookbooks_path = ['../common/management/cookbooks']
-      end
 
-      chef.run_list = [
-        'recipe[nat-router]',
-        'recipe[cloudstack::management-server]'
-      ]
+    CHEF_CONFIGURATION = JSON.parse(Pathname(__FILE__).dirname.join('chef_configuration.json').read)
 
-      chef.json = {
-          'iptables' => {
-              'lans' => %w(eth1 eth2)
-          }
-      }
+    management.vm.provision :chef_solo do |chef|
+      chef.run_list = CHEF_CONFIGURATION.delete('run_list')
+      chef.json = CHEF_CONFIGURATION
     end
   end
 end
