--- a/binary-installation-basic/Vagrantfile
+++ b/binary-installation-basic/Vagrantfile
@@ -50,7 +50,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       v.customize ['modifyvm', :id, '--hostonlyadapter2', virtualbox_interface_0]
     end
 
-    management.omnibus.chef_version = :latest 
+    management.omnibus.chef_version = "11.16.4"
     management.berkshelf.berksfile_path = File.join(File.dirname(__FILE__), 'Berksfile')
     management.berkshelf.enabled = true
 
