--- a/basic/marvin.cfg
+++ b/basic/marvin.cfg
@@ -1,3 +1,22 @@
+#
+#  Licensed to the Apache Software Foundation (ASF) under one
+#  or more contributor license agreements.  See the NOTICE file
+#  distributed with this work for additional information
+#  regarding copyright ownership.  The ASF licenses this file
+#  to you under the Apache License, Version 2.0 (the
+#  "License"); you may not use this file except in compliance
+#  with the License.  You may obtain a copy of the License at
+#  
+#    http://www.apache.org/licenses/LICENSE-2.0
+#  
+#  Unless required by applicable law or agreed to in writing,
+#  software distributed under the License is distributed on an
+#  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+#  KIND, either express or implied.  See the License for the
+#  specific language governing permissions and limitations
+#  under the License.
+#
+
 {
     "zones": [
         {
@@ -34,15 +53,15 @@
             "networktype": "Basic",
             "pods": [
                 {
-                    "endip": "192.168.56.220",
+                    "endip": "192.168.22.220",
                     "name": "DevCloud-POD-01",
-                    "startip": "192.168.56.200",
+                    "startip": "192.168.22.200",
                     "guestIpRanges": [
                         {
-                            "startip": "192.168.56.100",
-                            "endip": "192.168.56.199",
+                            "startip": "192.168.22.100",
+                            "endip": "192.168.22.199",
                             "netmask": "255.255.255.0",
-                            "gateway": "192.168.56.5"
+                            "gateway": "192.168.22.5"
                         }
                     ],
                     "netmask": "255.255.255.0",
@@ -53,20 +72,20 @@
                             "hosts": [
                                 {
                                     "username": "root",
-                                    "url": "http://192.168.56.10/",
+                                    "url": "http://192.168.22.10/",
                                     "password": "password"
                                 }
                             ],
                             "clustertype": "CloudManaged"
                         }
                     ],
-                    "gateway": "192.168.56.5"
+                    "gateway": "192.168.22.5"
                 }
             ],
             "internaldns1": "8.8.8.8",
             "secondaryStorages": [
                 {
-                    "url": "nfs://192.168.56.5/exports/secondary",
+                    "url": "nfs://192.168.22.5/exports/secondary",
                     "provider": "NFS"
                 }
             ]
@@ -77,7 +96,7 @@
     },
     "mgtSvr": [
         {
-            "mgtSvrIp": "192.168.56.1",
+            "mgtSvrIp": "192.168.22.1",
             "port": 8096
         }
     ],
