--- a/binary-installation-basic/chef_configuration.json
+++ b/binary-installation-basic/chef_configuration.json
@@ -24,11 +24,11 @@
         "path": "/exports/primary"
       },
       "hypervisor_tpl": {
-        "xenserver": "http://packages.shapeblue.com/systemvmtemplate/4.3/4.3.1/systemvm64template-2014-11-04-4.3.1-xen.vhd.bz2"
+        "xenserver": "http://packages.shapeblue.com/systemvmtemplate/4.5/systemvm64template-4.5-xen.vhd.bz2"
       },
       "configuration": "/vagrant/marvin.cfg.erb",
-      "yum_repo": "http://packages.bhaisaab.org/cloudstack/testing/centos/4.3/",
-      "apt_repo": "http://packages.bhaisaab.org/cloudstack/testing/debian/4.3/",
-      "version": "4.3.2"
+      "yum_repo": "http://packages.shapeblue.com/cloudstack/testing/centos/4.5/",
+      "apt_repo": "http://packages.shapeblue.com/cloudstack/testing/debian/4.5/",
+      "version": "4.5.0"
   }
 }
