--- a/binary-installation-advanced/chef_configuration.json
+++ b/binary-installation-advanced/chef_configuration.json
@@ -1,6 +1,6 @@
 {
   "run_list": [
-    "recipe[cloudstack_vagrant_environment]",
+    "recipe[binary-installation]",
     "recipe[nat-router]"
   ],
   "set_fqdn": "*.localdomain",
