--- a/basic/chef_configuration.json
+++ b/basic/chef_configuration.json
@@ -1,13 +1,25 @@
+
 {
   "run_list": [
-    "recipe[cloudstack]"
+    "recipe[development-installation]",
+    "recipe[nat-router]"
   ],
+  "set_fqdn": "*.localdomain",
+  "selinux": {
+      "state": "permissive"
+  },
   "cloudstack": {
-    "systemvms": [
-      {
-        "hypervisor": "XenServer",
-        "url": "http://packages.shapeblue.com/systemvmtemplate/4.5/systemvm64template-4.5-xen.vhd.bz2"
-      }
-    ]
+      "secondary": {
+        "path": "/exports/secondary"
+      },
+      "primary": {
+        "path": "/exports/primary"
+      },
+      "hypervisor_tpl": {
+        "xenserver": "http://packages.shapeblue.com/systemvmtemplate/4.5/systemvm64template-4.5-xen.vhd.bz2"
+      },
+      "yum_repo": "http://packages.shapeblue.com/cloudstack/testing/centos/4.5/",
+      "apt_repo": "http://packages.shapeblue.com/cloudstack/testing/debian/4.5/",
+      "version": "4.5.0"
   }
 }
